-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 15
-
Component/s: hotspot
-
b22
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8320861 | 11.0.23-oracle | Ivan Bereziuk | P4 | Resolved | Fixed | b01 |
| JDK-8321497 | 11.0.23 | Andrew Lu | P4 | Resolved | Fixed | b01 |
| JDK-8320960 | 8u411 | Ivan Bereziuk | P4 | Resolved | Fixed | b01 |
# ./build/macosx-x86_64-server-fastdebug/images/jdk/bin/java -XX:ErrorHandlerTest=12 --version
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGILL (0x4) at pc=0x0000000107e39dc1, pid=65201, tid=7171
#
# JRE version: Java(TM) SE Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.gerard.open)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-internal+0-adhoc.gerard.open, mixed mode, sharing, tiered, compressed oops, g1 gc, bsd-amd64)
# Problematic frame:
# V [libjvm.dylib+0xc39dc1] VMError::controlled_crash(int)+0x3cf
#
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /Volumes/Work/bugs/0000000/jdk15/hs_err_pid65201.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
Current thread is 7171
Dumping core ...
No core file was generated in the above case.
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGILL (0x4) at pc=0x0000000107e39dc1, pid=65201, tid=7171
#
# JRE version: Java(TM) SE Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.gerard.open)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-internal+0-adhoc.gerard.open, mixed mode, sharing, tiered, compressed oops, g1 gc, bsd-amd64)
# Problematic frame:
# V [libjvm.dylib+0xc39dc1] VMError::controlled_crash(int)+0x3cf
#
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /Volumes/Work/bugs/0000000/jdk15/hs_err_pid65201.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
Current thread is 7171
Dumping core ...
No core file was generated in the above case.
- backported by
-
JDK-8320861 "Dumping core ..." is shown despite claiming that "# No core dump will be written."
-
- Resolved
-
-
JDK-8320960 "Dumping core ..." is shown despite claiming that "# No core dump will be written."
-
- Resolved
-
-
JDK-8321497 "Dumping core ..." is shown despite claiming that "# No core dump will be written."
-
- Resolved
-
- relates to
-
JDK-8243196 Take system native crash reporter into account when reporting any crash log info
-
- Closed
-
-
JDK-8237727 Mac: after we handle a crash, Apple's crash reporter is left with incorrect state
-
- Closed
-
(2 links to)