8237777: "Dumping core ..." is shown despite claiming that "# No core dump will be written."

Remove the unneeded and possibly misleading message.

Reviewed-by: dholmes, ysuenaga